Added `created_at` and `pushed_at` `timeago` data values, disabled console.log

--- a/public/index.jade
+++ b/public/index.jade
@@ -3,7 +3,7 @@ h1= title
 ul
 	for repo in public.repos._data
 		if repo['fork'] == false
-			= console.log(repo)
+			//- = console.log(repo)
 			li
 				a(href="#{repo['html_url']}") #{repo['name']}<br/>
 				| Stars: #{repo['stargazers_count']}<br/>
