--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -3,5 +3,6 @@ html
   head
     title= title
     meta(name="viewport" content="width=device-width, initial-scale=1")
-  body
+    link(rel="stylesheet" href="/css/main.css")
+  body.sans-serif
     != yield
