--- a/public/index.jade
+++ b/public/index.jade
@@ -1,13 +1,13 @@
+p= description
+
 for repo in public.repos._data
 	if repo['fork'] == false
-		//- = console.log(repo)
 		article.w-third-ns.w-50-m.fl.ba.b--black-10
 			h3.bg-near-white.br--top.mv0.pa3
 				a(href="#{repo['html_url']}")= repo['name']
 			.pa3.bt.b--black-10
 				p.ma0 Stars: #{repo['stargazers_count']}<br/>
 					| Forks: #{repo['forks_count']}<br/>
-					i.fas.fa-code-branch
 					if repo['license']
 						| License: 
 						abbr(title="#{repo['license']['name']}") #{repo['license']['spdx_id']}<br/>
