--- a/public/css/_tachyons.scss
+++ b/public/css/_tachyons.scss
@@ -43,7 +43,7 @@
  //  Modules 
  @import '../../node_modules/tachyons-sass/scss/box-sizing';
 //  @import '../../node_modules/tachyons-sass/scss/aspect-ratios';
-//  @import '../../node_modules/tachyons-sass/scss/images';
+ @import '../../node_modules/tachyons-sass/scss/images';
 //  @import '../../node_modules/tachyons-sass/scss/background-size';
 //  @import '../../node_modules/tachyons-sass/scss/background-position';
 //  @import '../../node_modules/tachyons-sass/scss/outlines';
